text size change

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             </div>
             <hr>
             <div class="end">
-                <p>© 2024 The Coca‑Cola Company. All rights reserved.</p>
+                <p class="end">© 2024 The Coca‑Cola Company. All rights reserved.</p>
             </div>
             
         </div>  
